# dune-localfefunctions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README  README.md  config.h.cmake  dune-localfefunctions.pc.in  dune.module
.github/workflows/: codespell.yml  debian-coverage.yml  debian.yml  reuseLint.yml  style.yml
.reuse/: dep5
cmake/FormatTarget/: CMakeLists.txt  CPM.cmake
cmake/modules/: CMakeLists.txt  DuneLocalfefunctionsMacros.cmake
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/localfefunctions/: CMakeLists.txt  concepts.hh  derivativetransformators.hh  eigenDuneTransformations.hh  expressions.hh  helper.hh  leafNodeCollection.hh  linalgconcepts.hh  linearAlgebraHelper.cpp  linearAlgebraHelper.hh  localFunctionArguments.hh  localFunctionHelper.hh  localFunctionInterface.hh  localFunctionName.hh  meta.cc  meta.cpp  meta.hh
dune/localfefunctions/cachedlocalBasis/: CMakeLists.txt  cachedlocalBasis.hh  cachedlocalBasis.inl
dune/localfefunctions/expressions/: CMakeLists.txt  binaryExpr.hh  constant.hh  dotProductExpr.hh  exprChecks.hh  expressionHelper.hh  gradExpr.hh  greenLagrangeStrains.hh  linearStrainsExpr.hh  negateExpr.hh  normSquaredExpr.hh  rebind.hh  scaleExpr.hh  sqrtExpr.hh  sumExpr.hh  unaryExpr.hh
dune/localfefunctions/expressions/scalarunaryexpressions/: CMakeLists.txt  scalarLogExpr.hh  scalarPowExpr.hh  scalarSqrtExpr.hh  scalarUnaryExpression.hh
dune/localfefunctions/impl/: CMakeLists.txt  clonableLocalFunction.hh  localFunctionTemplate.hh  projectionBasedLocalFunction.hh  standardLocalFunction.hh
dune/localfefunctions/localBasis/: CMakeLists.txt  localBasis.hh  localBasis.inl
dune/localfefunctions/manifolds/: CMakeLists.txt  manifoldInterface.hh  realTuple.cpp  realTuple.hh  unitVector.cpp  unitVector.hh
dune/localfefunctions/test/: CMakeLists.txt  cachedlocalbasis.cc  expressionTest.cc  expressionTest2.cc  factories.hh  fecache.hh  testDerivativeTransformation.cc  testDotExpr.cc  testFacilities.cc  testFacilities.hh  testGreenLagrangianStrainsExpr.cc  testHelpers.hh  testLinearStrainsExpr.cc  testNegateExpr.cc  testNormSquaredExpr.cc  testPowExpr.cc  testProjectionBasedLocalFunction.cc  testScaleExpr.cc  testSqrtExpr.cc  testStandartLocalFunction.cc  testSumElaboratedExpr.cc  testSumExpr.cc  testbadinvokations.cc  testcachedlocalbasis.cc  testexpression.hh  testmanifoldsblockvector.cc
src/: CMakeLists.txt  dune-localfefunctions.cc
